<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tetris</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="rotate">Rotate</string>
    <string name="down">Down</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="gameover">GAME OVER !!</string>
</resources>
