<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <LinearLayout android:id="@+id/linear_container_button"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:background="#ffffff"
                  android:layout_alignParentBottom="true">

        <Button android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonLeftClick"
                android:text="@string/left"/>
        <Button android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonDownClick"
                android:text="@string/down"/>
        <Button android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonRotateClick"
                android:text="@string/rotate"/>
        <Button android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonRightClick"
                android:text="@string/right"/>

    </LinearLayout>
    <com.alex.tetris.widget.GameBoardView
            android:id="@+id/view_gameboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/linear_container_button"
            />
    <Button android:id="@+id/button_start_pause"
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="onButtonStartClick"/>
    <RelativeLayout android:id="@+id/gameover_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#99000000"
                    android:visibility="gone">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/gameover"
                  android:id="@+id/textView_gameover"
                  android:textSize="25dip"
                  android:textColor="#FFFFFF"
                  android:layout_centerInParent="true"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart"
                android:layout_below="@id/textView_gameover"
                android:onClick="onButtonRestartClick"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>

